# ashberri_server

./: .gitignore  Ashberri.mwb  Ashberri.mwb.bak  Dockerfile  ER.mwb  ER.mwb.bak  Mkpmfile  README.md  daphne_config.py  data.csv  db.sqlite3  index.pkl  manage.py  mkpm  mkpm.json  photos-798d6-firebase-adminsdk-du390-87d6686763.json  pyproject.toml  request.rest  requirements.txt  setup_postgres.sh
ER/: ER.mwb  ER.mwb.bak
account/: admin.py  modelapiview.py  models.py  renderers.py  rought.py  serializers.py  urls.py  userinfowithfriendstatus.py  views.py
account/migrations/: 0001_initial.py  0002_remove_user_tc_user_cfirst_user_dfirst.py  0002_user_c_first_user_d_first.py  0002_user_cfirst_user_dfirst_user_date_of_birth.py  0003_user_c_second_user_d_second_alter_user_c_first_and_more.py  0004_remove_user_c_first_remove_user_d_first_and_more.py  0005_remove_user_c_second_remove_user_d_second.py  0006_alter_user_date_of_birth.py  0007_alter_user_date_of_birth.py  0008_remove_user_date_of_birth_user_day_user_month_and_more.py  0009_rename_name_user_username.py  0010_rename_username_user_name.py  0011_user_picture.py  0012_profile.py  0013_remove_user_picture.py  0014_user_picture_delete_profile.py  (+21 more)
ashberri_server/: asgi.py  routing.py  settings.py  urls.py  views.py  wsgi.py
chat/: admin.py  apps.py  models.py  views.py
customsearch/: apps.py  serializers.py  urls.py  views.py
friend/: admin.py  friend_request_status.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
post/: admin.py  models.py  serializers.py  urls.py  views.py
(+11 files in other folders)
