[tool.poetry]
name = "ashberri_server"
version = "0.1.0"
description = ""
authors = ["Ashish Thakur <sendashishthakur@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.8.1"
channels = "4.1.0"
Django = "5.0.4"
django-cors-headers = "4.3.1"
django-filter = "24.2"
djangorestframework = "3.15.1"
djangorestframework-simplejwt = "5.3.1"
joblib = "1.4.0"
numpy = "1.26.4"
pillow = "10.3.0"
psycopg2-binary = "2.9.9"
PyJWT = "2.8.0"
scikit-learn = "1.4.1.post1"
scipy = "1.13.0"
sqlparse = "0.4.4"
threadpoolctl = "3.4.0"
typing_extensions = "4.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
